# romakan

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
source/: hiragana.json
src/romakan/: __init__.py  converter.py  mora.py
tests/: test_converter.py  test_mora.py
