[tool.poetry]
name = "romakan"
version = "0.1.0"
description = ""
authors = ["zipkortnicks57 <nonofficial2015@gamil.com>"]
readme = "README.md"
packages = [{include = "romakan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
coverage = "^7.6.10"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
my-script = "romakan"

[tool.pytest_env]
ENV_FOR_DYNACONF = "test"

[tool.pytest.ini_options]
pythonpath = "./src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

